# digift

./: .env  README  conftest.py  env_exemple  pyproject.toml
digift/API/: products.py  session.py
digift/UI/: application_manager.py
digift/UI/page/: certificates.py
modal/: app.py  application_manager.py  certificates.py  js_test.py
modal/page/: main.py
tests/: test.py  test_API.py  test_UI.py
tests/Shema/: shema.py
utils/: base.py
